=================
Version 1.4.2.0
=================

Fixed Bugs:
- Fixed sendLinearCmd and sendRotateCmd not working properly.

=================
Version 1.4.1.0
=================

New Features:
- A Splitter Node can have a custom transition UI via Layout (Qml) Resource.
- Metronomes can automatically emit Toy commands. Project default is to emit
  vibration commands.

Changes:
- PlayerTextBox methods showButtonPrompts & showInput take an aditional optional
  argument that denotes which storage variable the result should be written to.
- Tags objects in scripts have new getter methods: numResources & resources.
- The Script Editor has a basic autocomplete functionality that suggests
  words based on language keywords, registered types and words already
  present in all scripts.
- Buttplug.io client was swapped out with a more up-to-date implementation.
- Buttplug.io works now on andoid.

Fixed Bugs:
- Fixed a crash when removing a resource with tags.
- Fixed a crash when loading an image and giving an invalid project-id.
- Fix for potential crash on closing the app while in the editor.
- Fixed storing values from showInput into storage. It works now as intended.

=================
Version 1.4.0.0
=================

Fixed Bugs:
- Fixed Node changes not generating an undo entry on the undo stack.
- Fixed a crash in the help overlay, when highlighted widgets are 
  deleted before the overlay can show.
- Fixed a bug that prevented projects from being saved, when a rename was requested
  but the folder failed to rename.
- Fixed a crash when loading scene nodes which are not linked to a scene because of
  faulty project configuration.
- Fixed a few bugs with updating the script list and the ui for the selected scripts.
- Fixed QML binding loop for buttons.
- Fixed adding tags to resources. Now they actually work as intended.

New Features:
- Added the possibility to configure the Layout of the Player for the project as a whole.
- Created an Auto-Updater for Windows.